style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }

.header {
    color: #FFF;
    text-align: center;
    font-family: Inter;
    font-size: 40px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}

.text {
    color: #FFF;
    font-family: Inter;
    font-size: 15px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}

.container {
    width: 339px;
    height: 359px;
    flex-shrink: 0;
    background-color: #1e1e1e; 
    border-radius: 12px;
  }  

.text-bold {
    color: #FFF;
    font-family: Inter;
    font-size: 15px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
}

.screen {
    display: none; 
    width: 100%;
    height: 100%;
    margin-left: 8px; 
    margin-top: 8px; 
    background-color: #f4a334;
    overflow: hidden;
}

.screen.active {
    display: flex; 
    flex-direction: column;
    align-items: center;
    padding-left: 0; 
}

html, body {
    height: 100%;
    width: 100%;
    background-color: #f4a334;
    overflow: hidden;
}

.cake-image {
    width: 300px;
    height: 300px;
    flex-shrink: 0;
    aspect-ratio: 1/1;
}

.buttons {
    display: flex; 
    flex-direction: row;
}

.cake-recipe {
    width: 339px;
    height: 359px;
    margin: 10px; 
    padding: 10px;
    flex-shrink: 0;
    color: #FFF;
}

.image-button {
  background: none;
  border: none;
  padding: 0;
  cursor: pointer;
  outline: none;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.image-button img {
  width: 90px; 
  height: auto;
  display: block;
  transition: transform 0.1s;
  user-select: none;
  -webkit-user-drag: none;
}

.image-button:hover img {
  transform: scale(1.05);
}

.image-button:active img {
  transform: scale(0.95);
}

